--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,18 @@
+@font-face {
+ font-family: "font-1";
+ src: url(./assets/fonts/Dongle-Regular.ttf);
+}
+@font-face {
+ font-family: "font-2";
+ src: url(./assets/fonts/Dongle-Light.ttf);
+} 
+
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+  font-family: var(--font-1);
 }
-
-/* @font-face {
-  font-family: "font-1";
-  src: url(../assets/fonts/Dongle-Regular.ttf);
-}
-@font-face {
-  font-family: "font-2";
-  src: url(../assets/fonts/Dongle-Light.ttf);
-} */
 
 :root {
   --color-1: #546fe4;
@@ -19,17 +20,9 @@
   --color-3: rgb(100, 100, 100);
   --black: #060d2c;
   --white: rgb(238, 238, 238);
+  --font-1: "font-1", sans-serif;
+  --font-2: "font-2", sans-serif;
 }
-
-/* $font-1: "font-1", sans-serif;
-$font-2: "font-2", sans-serif;
-
-$color-1: #546fe4;
-$color-2: #212040;
-$color-3: rgb(100, 100, 100);
-$black: #060d2c;
-$white: rgb(238, 238, 238); */
-
 
 body {
   background: var(--color-2);
@@ -39,6 +32,7 @@ body {
 li {
   list-style: none;
 }
+
 .result {
   display: flex;
   flex-wrap: wrap;
