--- a/src/Components/Card/card.module.css
+++ b/src/Components/Card/card.module.css
@@ -2,7 +2,7 @@
     flex: 1 0 25%;
     min-width: 260px;
     max-width: 280px;
-    height: 620px;
+    height: 710px;
     background: #060d2c;
     border-radius: 35px;
     margin: 5px;
@@ -23,7 +23,7 @@
     border-radius: 0 0 30px 30px;
 }
 
-img {
+.card img {
     width: 80%;
     height: 254px;
     object-fit: cover;
@@ -35,48 +35,55 @@ img {
       0 16px 1px rgba(255, 255, 255, 0.05);
   }
 
-h2 {
+.card h2 {
     margin: 24px 0 0px;
     letter-spacing: 1px;
     line-height: 20px;
 }
 
-h3 {
+.card h3 {
     letter-spacing: 1px;
     font-size: 1.4rem;
     margin-top: 10px;
 }
 
-h4 {
+.card h4 {
     letter-spacing: 1px;
     font-size: 1.2rem;
     margin-top: -4px;
 }
 
-h5 {
+.card h4 span {
+    font-size: 0.7rem;
+}
+
+.card h5 {
     color: var(--color-3);
     letter-spacing: 1px;
     font-size: 1.2rem;
     font-weight: 300;
 }
 
-span {
-    font-size: 0.7rem;
-}
-
-ul {
+.card ul {
     margin: 6px 0;
     display: flex;
     flex-wrap: wrap;
 }
 
-.date {
-    letter-spacing: 1px;
-    font-size: 1.2rem;
-    font-weight: 300;
+.card li {
+    background: #212040;
+    border-radius: 18px;
+    padding: 0px 7px;
+    margin: 0 4px 4px 0;
+    font-size: 1.1rem;
 }
 
-p {
+.card li:first-child{
+    margin-left: -4px;
+}
+
+
+.card p {
     color: var(--color-3);
     font-size: 1.3rem;
     line-height: 20px;
@@ -84,14 +91,14 @@ p {
     overflow-y: scroll;
 }
 
-p::-webkit-scrollbar {
+.card p::-webkit-scrollbar {
     display: none;
 }
 
-.btn {
+.card .btn {
     background: #546fe4;
     position: absolute;
-    bottom: 16px;
+    bottom: 1px;
     left: 50%;
     transform: translateX(-50%);
     padding: 14px 0;
@@ -103,9 +110,10 @@ p::-webkit-scrollbar {
     z-index: 50;
 }
 
-.btn:hover {
+.card .btn:hover {
     background: #212040;
     box-sizing: 0 0 10px #546ee4d2;
+    font-size: 1.028rem;
 }
 
 
