--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -1,24 +1,24 @@
-h1 {
+.header h1 {
     font-size: 3.3rem;
     text-align: center;
     letter-spacing: 2px;
     text-shadow: 2px 3px 0px #546fe4;
 }
 
-nav {
+.header nav {
     position: absolute;
     top: 16px;
     left: 16px;
     font-size: 1.3rem;
 }
 
-ul {
+.header nav ul {
     display: flex;
     width: 180px;
     justify-content: space-between;
 }
 
-a {
+.header nav ul a {
     text-decoration: none;
     color: var(--color-white);
     border-radius: 10px;
@@ -28,19 +28,19 @@ a {
     padding: 4px 8px;
 }
 
-a:visited {
+.header nav ul a:visited {
     text-decoration: none;
     color: var(--color-white);
 }
 
-a:hover {
+.header nav ul a:hover {
     background: var(--color-black);
 }
 
-a.nav_active {
+.header nav ul a.nav_active {
     background: var(--color-1);
 }
 
-a.nav_active:hover {
+.header nav ul a.nav_active:hover {
     background: var(--color-black);
 }
